remove unnecessary dependencies

--- a/pom.xml
+++ b/pom.xml
@@ -12,10 +12,10 @@
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <selenium.version>4.7.1</selenium.version>
+        <selenium.version>4.21.0</selenium.version>
         <testng.version>7.7.0</testng.version>
         <lombok.versioin>1.18.24</lombok.versioin>
-        <nxjsonparser.version>0.1.0</nxjsonparser.version>
+<gson.version>2.10.1</gson.version>
     </properties>
 
 
@@ -28,16 +28,17 @@
         </dependency>
 
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
             <version>${testng.version}</version>
             <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>com.nx</groupId>
-            <artifactId>json-parser</artifactId>
-            <version>${nxjsonparser.version}</version>
         </dependency>
 
         <dependency>
